# ash

./: CMakeLists.txt  README.md  main.c
include/: config.h
include/ash/: CMakeLists.txt  ashlib.c  ashlib.h  builtins.c  builtins.h
